syntax = "proto3"; 

import "google/protobuf/empty.proto";

option go_package = "github.com/txya900619/url-shortener/kgs/pkg/grpc/v1";

package key;

message GenerateKeyResponse {
    string key = 1;
}

message DeleteKeyRequest {
    repeated string keys = 1;
}

service KeyService {
    rpc GenerateKey (google.protobuf.Empty) returns (GenerateKeyResponse) {}
    rpc DeleteKeys(DeleteKeyRequest) returns (google.protobuf.Empty) {}
}
  